Add eval-if test case

--- a/data/eval-if.txt.html
+++ b/data/eval-if.txt.html
@@ -1,59 +1,55 @@
 <style TYPE='text/css'> <!-- p { line-height: 100%; } body { font-family: 'courier new'; line-height: 100%; } --> </style>
 </font>
 <font color='black'></font>
-<font color='blue'>search </font>
-<font color='black'></font>
-<font color='blue'>source </font>
-<font color='black'>=mytabl1 mycolumn=value</p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color='black'></font>
 <font color='black'>| </font>
 <font color='black'></font>
-<font color='blue'>stats </font>
-<font color='black'></font>
-<font color='blue'>avg </font>
-<font color='black'>(mycolumn) </font>
-<font color='blue'>by </font>
-<font color='black'>mycolumn</p>
+<font color='blue'>metadata </font>
+<font color='black'>type=hosts index=_internal</p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
 <font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>search </font>
-<font color='black'>TST123=value</p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color='black'></font>
-<font color='black'>| </font>
-<font color='black'></font>
-<font color='blue'>fields </font>
-<font color='black'>mycolumn</p>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
-<font color='black'></font>
-<font color='black'>, </font>
-<font color='black'> avg(mycolumn)</p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color='black'></font>
-<font color='black'>| </font>
-<font color='black'></font>
-<font color='blue'>eval </font>
-<font color='black'>test=</font>
-<font color='orange'>"abc"</font>
-<font color='black'>.</font>
-<font color='orange'>"xyz"</font>
-<font color='black'>.'ghf'.</font>
-<font color='orange'>"'hij'"</font>
-<font color='black'>.'hhh'</p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color='black'></font>
-<font color='black'>| </font>
-<font color='black'></font>
-<font color='blue'>search </font>
-<font color='black'></font>
-<font color='blue'>source </font>
-<font color='black'>=mytabl1 mycolumn=value</p>
+<font color='black'>NOT(host=</font>
+<font color='orange'>"YourSplunkServers"</font>
+<font color='black'>)</p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
 <font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>table </font>
-<font color='black'>ABC</p>
+<font color='black'>host</p>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
+<font color='black'></font>
+<font color='black'>, </font>
+<font color='black'> recentTime</p>
+&nbsp;&nbsp;&nbsp;</font>
+<font color='black'></font>
+<font color='black'>| </font>
+<font color='black'></font>
+<font color='blue'>eval </font>
+<font color='black'>age=now()-recentTime</p>
+&nbsp;&nbsp;&nbsp;</font>
+<font color='black'></font>
+<font color='black'>| </font>
+<font color='black'></font>
+<font color='blue'>eval </font>
+<font color='black'>status=if(age&lt300</p>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
+<font color='black'>,</font>
+<font color='orange'>"UP"</font>
+<font color='black'></p>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
+<font color='black'>,</font>
+<font color='orange'>"DOWN"</font>
+<font color='black'>)</p>
+&nbsp;&nbsp;&nbsp;</font>
+<font color='black'></font>
+<font color='black'>| </font>
+<font color='black'></font>
+<font color='blue'>table </font>
+<font color='black'>host</p>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
+<font color='black'></font>
+<font color='black'>, </font>
+<font color='black'>status</p>
