--- a/data/subsearch.txt.html
+++ b/data/subsearch.txt.html
@@ -5,11 +5,11 @@
 <font color='black'>=foo sourcetype=bar field=quux</p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>[ </font>
+<font color='black'>[ </font>
 <font color='black'>sub_searc</p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>| </font>
+<font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>stats </font>
 <font color='black'>count </font>
@@ -17,21 +17,21 @@
 <font color='black'>dimension</p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>] </font>
+<font color='black'>] </font>
 <font color='black'></p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>[ </font>
+<font color='black'>[ </font>
 <font color='black'>some really really long sub_searc</p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>| </font>
+<font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>eval </font>
 <font color='black'>subsearch=fields</p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>| </font>
+<font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>rex </font>
 <font color='black'>field=subsearch </font>
@@ -39,17 +39,17 @@
 <font color='black'></p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>| </font>
+<font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>eval </font>
 <font color='black'>omg=how_much_more</p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>] </font>
+<font color='black'>] </font>
 <font color='black'></p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>| </font>
+<font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>stats </font>
 <font color='black'>count </font>
@@ -57,19 +57,19 @@
 <font color='black'>something</p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>| </font>
+<font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>eval </font>
 <font color='black'>field1=stuff</p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>| </font>
+<font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>eval </font>
 <font color='black'>field2=more_stuff</p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>| </font>
+<font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>timechart </font>
 <font color='black'>sum(something) </font>
