--- a/data/join.txt.html
+++ b/data/join.txt.html
@@ -7,7 +7,7 @@
 <font color='black'></p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>| </font>
+<font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>stats </font>
 <font color='black'>sum(kb) </font>
@@ -17,7 +17,7 @@
 <font color='black'>splunk_server</p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>| </font>
+<font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>join </font>
 <font color='black'>type=</font>
@@ -25,7 +25,7 @@
 <font color='black'> splunk_server</p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>[ </font>
+<font color='black'>[ </font>
 <font color='black'></font>
 <font color='blue'>search </font>
 <font color='black'></font>
@@ -37,7 +37,7 @@
 <font color='black'> group=queue name=parsingqueue</p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>| </font>
+<font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>chart </font>
 <font color='black'>perc95(current_size_kb) </font>
