--- a/data/toString.txt.html
+++ b/data/toString.txt.html
@@ -5,13 +5,13 @@
 <font color='black'>=_internal</p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>| </font>
+<font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>head </font>
 <font color='black'>1</p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>| </font>
+<font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>eval </font>
 <font color='black'>numberString=</font>
@@ -19,13 +19,13 @@
 <font color='black'>(123456.789</p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>, </font>
+<font color='black'>, </font>
 <font color='black'> </font>
 <font color='orange'>"commas"</font>
 <font color='black'>)</p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color='black'></font>
-<font color='red'>| </font>
+<font color='black'>| </font>
 <font color='black'></font>
 <font color='blue'>table </font>
 <font color='black'>numberString</p>
