--- a/data/strings-single-quote.txt.html
+++ b/data/strings-single-quote.txt.html
@@ -14,18 +14,20 @@
 <font color=black>| </font>
 <font color=black></font>
 <font color=blue>eval </font>
-<font color=black>numberString=</font>
-<font color=blue>tostring </font>
-<font color=black>(123456.789</p>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
+<font color=black>foo=</font>
+<font color=orange>"use single quotes 'This is in the quotes' test"</font>
+<font color=black></p>
+&nbsp;&nbsp;&nbsp;</font>
 <font color=black></font>
-<font color=black>, </font>
-<font color=black> </font>
-<font color=orange>"commas"</font>
-<font color=black>)</p>
+<font color=black>| </font>
+<font color=black></font>
+<font color=blue>rex </font>
+<font color=black>field=foo </font>
+<font color=#04B404>'(?P&ltmyfoo&gt.+)'</font>
+<font color=black></p>
 &nbsp;&nbsp;&nbsp;</font>
 <font color=black></font>
 <font color=black>| </font>
 <font color=black></font>
 <font color=blue>table </font>
-<font color=black>numberString</p>
+<font color=black>foo myfoo</p>
