--- a/data/eval-if.txt.html
+++ b/data/eval-if.txt.html
@@ -1,55 +1,55 @@
 <style TYPE='text/css'> <!-- p { line-height: 100%; } body { font-family: 'courier new'; line-height: 100%; } --> </style>
 </font>
-<font color='black'></font>
-<font color='black'>| </font>
-<font color='black'></font>
-<font color='blue'>metadata </font>
-<font color='black'>type=hosts index=_internal</p>
+<font color=black></font>
+<font color=black>| </font>
+<font color=black></font>
+<font color=blue>metadata </font>
+<font color=black>type=hosts index=_internal</p>
 &nbsp;&nbsp;&nbsp;</font>
-<font color='black'></font>
-<font color='black'>| </font>
-<font color='black'></font>
-<font color='blue'>search </font>
-<font color='black'>NOT(host=</font>
-<font color='orange'>"YourSplunkServers"</font>
-<font color='black'>)</p>
+<font color=black></font>
+<font color=black>| </font>
+<font color=black></font>
+<font color=blue>search </font>
+<font color=black>NOT(host=</font>
+<font color=orange>"YourSplunkServers"</font>
+<font color=black>)</p>
 &nbsp;&nbsp;&nbsp;</font>
-<font color='black'></font>
-<font color='black'>| </font>
-<font color='black'></font>
-<font color='blue'>table </font>
-<font color='black'>host</p>
+<font color=black></font>
+<font color=black>| </font>
+<font color=black></font>
+<font color=blue>table </font>
+<font color=black>host</p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
-<font color='black'></font>
-<font color='black'>, </font>
-<font color='black'> recentTime</p>
+<font color=black></font>
+<font color=black>, </font>
+<font color=black> recentTime</p>
 &nbsp;&nbsp;&nbsp;</font>
-<font color='black'></font>
-<font color='black'>| </font>
-<font color='black'></font>
-<font color='blue'>eval </font>
-<font color='black'>age=now()-recentTime</p>
+<font color=black></font>
+<font color=black>| </font>
+<font color=black></font>
+<font color=blue>eval </font>
+<font color=black>age=now()-recentTime</p>
 &nbsp;&nbsp;&nbsp;</font>
-<font color='black'></font>
-<font color='black'>| </font>
-<font color='black'></font>
-<font color='blue'>eval </font>
-<font color='black'>status=if(age&lt300</p>
+<font color=black></font>
+<font color=black>| </font>
+<font color=black></font>
+<font color=blue>eval </font>
+<font color=black>status=if(age&lt300</p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
-<font color='black'>,</font>
-<font color='orange'>"UP"</font>
-<font color='black'></p>
+<font color=black>,</font>
+<font color=orange>"UP"</font>
+<font color=black></p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
-<font color='black'>,</font>
-<font color='orange'>"DOWN"</font>
-<font color='black'>)</p>
+<font color=black>,</font>
+<font color=orange>"DOWN"</font>
+<font color=black>)</p>
 &nbsp;&nbsp;&nbsp;</font>
-<font color='black'></font>
-<font color='black'>| </font>
-<font color='black'></font>
-<font color='blue'>table </font>
-<font color='black'>host</p>
+<font color=black></font>
+<font color=black>| </font>
+<font color=black></font>
+<font color=blue>table </font>
+<font color=black>host</p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
-<font color='black'></font>
-<font color='black'>, </font>
-<font color='black'>status</p>
+<font color=black></font>
+<font color=black>, </font>
+<font color=black>status</p>
