--- a/data/simple.txt.html
+++ b/data/simple.txt.html
@@ -1,63 +1,9 @@
 <style TYPE='text/css'> <!-- p { line-height: 100%; } body { font-family: 'courier new'; line-height: 100%; } --> </style>
-</font>
-<font color=black></font>
-<font color=blue>search </font>
-<font color=black></font>
-<font color=blue>source </font>
-<font color=black>=mytabl1 mycolumn=value</p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color=black></font>
-<font color=black>| </font>
-<font color=black></font>
-<font color=blue>stats </font>
-<font color=black></font>
-<font color=blue>avg </font>
-<font color=black>(mycolumn) </font>
-<font color=blue>by </font>
-<font color=black>mycolumn</p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color=black></font>
-<font color=black>| </font>
-<font color=black></font>
-<font color=blue>search </font>
-<font color=black>TST123=value</p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color=black></font>
-<font color=black>| </font>
-<font color=black></font>
-<font color=blue>fields </font>
-<font color=black>mycolumn</p>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
-<font color=black></font>
-<font color=black>, </font>
-<font color=black> avg(mycolumn)</p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color=black></font>
-<font color=black>| </font>
-<font color=black></font>
-<font color=blue>eval </font>
-<font color=black>test=</font>
-<font color=orange>"abc"</font>
-<font color=black>.</font>
-<font color=orange>"xyz"</font>
-<font color=black>.</font>
-<font color=#04B404>'ghf'</font>
-<font color=black>.</font>
-<font color=orange>"'hij'"</font>
-<font color=black>.</font>
-<font color=#04B404>'hhh'</font>
-<font color=black></p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color=black></font>
-<font color=black>| </font>
-<font color=black></font>
-<font color=blue>search </font>
-<font color=black></font>
-<font color=blue>source </font>
-<font color=black>=mytabl1 mycolumn=value</p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color=black></font>
-<font color=black>| </font>
-<font color=black></font>
-<font color=blue>table </font>
-<font color=black>ABC</p>
+</font><font color=black></font><font color=blue>search </font><font color=black></font><font color=blue>source </font><font color=black>=mytabl1 mycolumn=value</p>
+&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>| </font><font color=black></font><font color=blue>stats </font><font color=black></font><font color=blue>avg </font><font color=black>(mycolumn) </font><font color=blue>by </font><font color=black>mycolumn</p>
+&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>| </font><font color=black></font><font color=blue>search </font><font color=black>TST123=value</p>
+&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>| </font><font color=black></font><font color=blue>fields </font><font color=black>mycolumn</p>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>, </font><font color=black> avg(mycolumn)</p>
+&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>| </font><font color=black></font><font color=blue>eval </font><font color=black>test=</font><font color=#04B404>"abc"</font><font color=black>.</font><font color=#04B404>"xyz"</font><font color=black>.</font><font color=gold>'ghf'</font><font color=black>.</font><font color=#04B404>"'hij'"</font><font color=black>.</font><font color=gold>'hhh'</font><font color=black></p>
+&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>| </font><font color=black></font><font color=blue>search </font><font color=black></font><font color=blue>source </font><font color=black>=mytabl1 mycolumn=value</p>
+&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>| </font><font color=black></font><font color=blue>table </font><font color=black>ABC</p>
