--- a/data/strings-single-quote.txt.html
+++ b/data/strings-single-quote.txt.html
@@ -1,33 +1,6 @@
 <style TYPE='text/css'> <!-- p { line-height: 100%; } body { font-family: 'courier new'; line-height: 100%; } --> </style>
-</font>
-<font color=black></font>
-<font color=blue>index </font>
-<font color=black>=_internal</p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color=black></font>
-<font color=black>| </font>
-<font color=black></font>
-<font color=blue>head </font>
-<font color=black>1</p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color=black></font>
-<font color=black>| </font>
-<font color=black></font>
-<font color=blue>eval </font>
-<font color=black>foo=</font>
-<font color=orange>"use single quotes 'This is in the quotes' test"</font>
-<font color=black></p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color=black></font>
-<font color=black>| </font>
-<font color=black></font>
-<font color=blue>rex </font>
-<font color=black>field=foo </font>
-<font color=#04B404>'(?P&ltmyfoo&gt.+)'</font>
-<font color=black></p>
-&nbsp;&nbsp;&nbsp;</font>
-<font color=black></font>
-<font color=black>| </font>
-<font color=black></font>
-<font color=blue>table </font>
-<font color=black>foo myfoo</p>
+</font><font color=black></font><font color=blue>index </font><font color=black>=_internal</p>
+&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>| </font><font color=black></font><font color=blue>head </font><font color=black>1</p>
+&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>| </font><font color=black></font><font color=blue>eval </font><font color=black>foo=</font><font color=#04B404>"use single quotes 'This is in the quotes' test"</font><font color=black></p>
+&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>| </font><font color=black></font><font color=blue>rex </font><font color=black>field=foo </font><font color=gold>'(?P&ltmyfoo&gt.+)'</font><font color=black></p>
+&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>| </font><font color=black></font><font color=blue>table </font><font color=black>foo myfoo</p>
