--- a/data/long_formated.txt.html
+++ b/data/long_formated.txt.html
@@ -1,6 +1,6 @@
 <style TYPE='text/css'> <!-- p { line-height: 100%; } body { font-family: 'courier new'; line-height: 100%; } --> </style>
 </font><font color=black></font><font color=blue>sourcetype</font><font color=black>=CI_* BULK_KEY=$args.BULK_KEY$ ABC &lt=5</p>
-&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>eval</font><font color=black> BULK_TRX_NUMBER=</font><font color=blue>coalesce</font><font color=black>(BULK_TRX_NUMBER</p>
+&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>eval</font><font color=black> BULK_TRX_NUMBER=coalesce(BULK_TRX_NUMBER</p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>,</font><font color=black>  </font><font color=#04B404>"12,3'4|5"</font><font color=black>)</p>
 &nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>eval</font><font color=black> BULK_CONTROL_SUM=coalesce(BULK_CONTROL_SUM</p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>,</font><font color=black> </font><font color=#04B404>"678 eval 901"</font><font color=black>)</p>
